# pygscholar

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.html  LICENSE  README.html  README.md  _config.yml  _toc.yml  api.html  development.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg
.github/workflows/: build_docs.yml  main.yml  pre-commit.yml
_modules/: index.html
_modules/pygscholar/: cli.html
_sources/: README.md  install.md  quickstart.md
_sources/docs/: api.rst  tutorial.ipynb
docs/: CONTRIBUTING.html  CONTRIBUTING.md  _config.yml  api.html  api.rst  configuration.html  configuration.md  development.md  index.md  tutorial.html  tutorial.ipynb
src/pygscholar/: __init__.py  author.py  cache.py  cli.py  config.py  department.py  publication.py  scholar_api.py  utils.py
src/pygscholar/api/: __init__.py  local_db.py  scholarly.py  scraper.py
src/pyscholar/: __init__.py  author.py  cli.py  department.py  publication.py  scholar_api.py
tests/: create_local_database.py  factory.py  test_api.py  test_author.py  test_cli.py  test_department.py  test_publications.py  test_scholar_api.py
