[metadata]
name = pygscholar
version = 0.0.4
description = Tool for interacting with google scholar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/pygscholar
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = action potential, cell models, features

[options]
packages = find:
install_requires =
    pydantic
    rich
    scholarly
    structlog
    typer
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scholar = pygscholar.cli:app

[options.extras_require]
dev =
    bump2version
    ipython
    pdbpp
    pre-commit
    twine
    wheel
docs =
    jupyter-book
test =
    pre-commit
    pydantic-factories
    pytest
    pytest-cov
    pytest-rerunfailures

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/pygscholar --cov-report html --cov-report xml --cov-report term-missing --reruns 5 -v
testpaths =
    tests

[isort]
profile = black

[mypy]
files = src/pygscholar,tests
ignore_missing_imports = true
exclude = docs
